--- a/junction-python/Cargo.toml
+++ b/junction-python/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 name = "junction"
 crate-type = ["cdylib"]
 
+[features]
+extension-module = ["pyo3/extension-module"]
+
 [dependencies]
 http = { workspace = true }
 junction-core = { workspace = true }
@@ -15,8 +18,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 
-pyo3 = { version = "0.21", features = [
-    "abi3-py38",
-    "serde",
-    "extension-module",
-] }
+pyo3 = { version = "0.21", features = ["abi3-py38", "serde"] }
+
+[build-dependencies]
+pyo3-build-config = "0.21"
