--- a/junction-python/Cargo.toml
+++ b/junction-python/Cargo.toml
@@ -17,8 +17,10 @@ once_cell = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
+xds-api = { workspace = true, features = ["pbjson"] }
 
 pyo3 = { version = "0.21", features = ["abi3-py38", "serde"] }
+pythonize = "0.21"
 
 [build-dependencies]
 pyo3-build-config = "0.21"
