--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
-name: Rust
+name: Regression Build and Test
 
-on:
+on: 
   push:
     branches: [ "main" ]
     
   pull_request:
     branches: [ "main" ]
-
+  
 env:
   CARGO_TERM_COLOR: always
 
