Add version and error information to cached xDS
Add version and last_error info into cached xDS so callers can see what
is going on when they dump config. This should make it easier to debug
issues without resorting to printf debugging while working on a
client/server.

--- a/junction-core/Cargo.toml
+++ b/junction-core/Cargo.toml
@@ -18,6 +18,7 @@ rand = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 serde_json = { workspace = true }
 serde_yml = { workspace = true }
+smol_str = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["time", "macros"] }
 tokio-stream = { workspace = true }
