--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rand = "0.8"
 serde = { version = "1.0", default-features = false }
 serde_json = "1.0"
 serde_yml = "0.0.10"
+smol_str = "0.3"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
