--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build
-      run: cargo build --verbose
+      run: cargo xtask python-build
       
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo xtask python-test
