--- a/junction-python/pyproject.toml
+++ b/junction-python/pyproject.toml
@@ -10,5 +10,8 @@ test = ["pytest", "pytest-httpbin"]
 requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
+[tool.ruff]
+exclude = ["*pb2.py", "*pb2_grpc.py"]
+
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "B", "I"]
