--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["junction-gateway-api", "junction-core", "junction-python", "xtask"]
+members = ["junction-api", "junction-core", "junction-python", "xtask"]
 resolver = "2"
 
 [workspace.package]
@@ -14,8 +14,8 @@ crossbeam-skiplist = "0.1"
 enum-map = "2.7"
 form_urlencoded = "1.1.1"
 futures = "0.3"
-k8s-openapi = { version = "0.21", features = ["v1_29"] }
-kube = { version = "0.88", features = ["runtime", "client", "derive"] }
+k8s-openapi = { version = "0.21" }
+kube = { version = "0.88" }
 h2 = "0.3"
 http = "1.1"
 tokio = { version = "1.38", default-features = false }
@@ -38,4 +38,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 xds-api = { version = "0.1", default-features = false }
 xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
 junction-core = { version = "0.1.0", path = "junction-core" }
-junction-gateway-api = { version = "0.1.0", path = "junction-gateway-api" }
+junction-api = { version = "0.1.0", path = "junction-api" }
