--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["junction-api", "junction-core", "junction-python", "xtask"]
+members = ["junction-api-types", "junction-core", "junction-python", "xtask"]
 resolver = "2"
 
 [workspace.package]
@@ -38,4 +38,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 xds-api = { version = "0.1", default-features = false }
 xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
 junction-core = { version = "0.1.0", path = "junction-core" }
-junction-api = { version = "0.1.0", path = "junction-api" }
+junction-api-types = { version = "0.1.0", path = "junction-api-types" }
