--- a/crates/junction-api-types/Cargo.toml
+++ b/crates/junction-api-types/Cargo.toml
@@ -13,3 +13,8 @@ serde = { workspace = true, default-features = false }
 serde_json = { workspace = true }
 xds-api = { workspace = true, default-features = false }
 once_cell = { workspace = true }
+
+junction-typeinfo = { workspace = true, optional = true }
+
+[features]
+typeinfo = ["dep:junction-typeinfo"]
