--- a/crates/junction-api-types/Cargo.toml
+++ b/crates/junction-api-types/Cargo.toml
@@ -11,6 +11,7 @@ regex = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true, default-features = false }
 serde_json = { workspace = true }
+thiserror = { workspace = true }
 xds-api = { workspace = true, default-features = false }
 once_cell = { workspace = true }
 
