Renamed attachment to comments, improved tests and documentation

--- a/junction-python/samples/routing-and-load-balancing/jct_http_server_feature_1.yml
+++ b/junction-python/samples/routing-and-load-balancing/jct_http_server_feature_1.yml
@@ -19,7 +19,7 @@ spec:
         image: jct_http_server:latest
         imagePullPolicy: IfNotPresent
         env:
-          - name: VERSION
+          - name: TARGET
             value: "jct-http-server-feature-1"
 ---
 apiVersion: v1
