--- a/junction-python/pyproject.toml
+++ b/junction-python/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 dependencies = ["requests>2.0", "urllib3>2.0"]
 
 [project.optional-dependencies]
-test = ["pytest", "pytest-httpbin"]
+test = ["pytest"]
 
 [build-system]
 requires = ["maturin>=1.0,<2.0"]
