--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -22,12 +22,13 @@ env:
   rust_min: 1.79
 
 jobs:
-  k3s:
-    name: k3s
+  smoke-test:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
         uses: actions/checkout@master
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: k3s
         uses: yellowmegaman/k3s-gha@master
       - name: set up ezbake and server
