All junction config roundtrips to/from xDS and k8s
All Junction config now roundtrips from xDS and k8s, with conversions
behind the `xds` and `kube` features of the junction-api crate.

As part of completing the round-trips, there's no longer a 1:1
correspondence between xDS resources and Junction API types. Backends
require a RouteAction pointing uniquely at them to determine their hash
parameters for load balancing strategies like RingHash - the client
can't guarantee that an action like that will always exist, so it asks
for a well-known default Listener. Backends now also generate that
well-known Listener.

--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -4,18 +4,31 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-k8s-openapi = { workspace = true, features = ["v1_29"] }
-kube = { workspace = true, features = ["derive"] }
 http = { workspace = true }
 regex = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true, default-features = false }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-xds-api = { workspace = true, default-features = false }
 once_cell = { workspace = true }
 
+# typeinfo
 junction-typeinfo = { workspace = true, optional = true }
 
+# xds
+xds-api = { workspace = true, default-features = false, optional = true }
+
+# kube
+# TODO: have to remove dependencies on Duration to make these optional
+k8s-openapi = { workspace = true, features = ["v1_29"] }
+kube = { workspace = true, features = ["derive"] }
+gateway-api = { version = "0.10.0", optional = true }
+
+[dev-dependencies]
+serde_yml = "0.0.12"
+
 [features]
+default = ["kube", "xds"]
 typeinfo = ["dep:junction-typeinfo"]
+kube = ["dep:gateway-api"]
+xds = ["dep:xds-api"]
