--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
           kubectl apply -f junction-python/samples/routing-and-load-balancing/latest_ezbake.yml
-          docker build --tag jct_http_server --file junction-python/samples/routing-and-load-balancing/Dockerfile-server --load .
+          docker build --tag jct_http_server/latest --file junction-python/samples/routing-and-load-balancing/Dockerfile-server --load .
           k3d image import jct_http_server/latest -c test-cluster-1
 
           kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server.yml 
@@ -51,7 +51,7 @@ jobs:
 
       - name: build test docker
         run: |
-            docker build --tag jct_client --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client --load .
+            docker build --tag jct_client/latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client --load .
             k3d image import jct_client/latest -c test-cluster-1
 
       - name: run test
