--- a/junction-python/samples/routing-and-load-balancing/Dockerfile-client
+++ b/junction-python/samples/routing-and-load-balancing/Dockerfile-client
@@ -1,28 +1,3 @@
-## We don't do any of the clever incremtal stuff as it makes
-## the initial build take 1 minute longer, and the major purpose
-## of this container is in a github action where its always an 
-## initial build
-
-FROM lukemathwalker/cargo-chef:latest-rust-1 AS chef
-WORKDIR /app
-RUN apt update
-RUN apt install -y python3 python3-pip python3.11-venv python-is-python3
-RUN apt install -y 
-
-FROM chef AS builder 
-COPY ./junction-python ./junction-python
-COPY ./xtask ./xtask
-COPY ./Cargo.toml ./Cargo.toml
-COPY ./Cargo.lock ./Cargo.lock
-COPY ./crates ./crates
-COPY ./.cargo ./.cargo
-RUN cargo xtask python-build --maturin build
-
-FROM debian:bookworm-slim AS runtime
-RUN apt-get update
-RUN apt-get install -y python3 python3-pip python-is-python3
-WORKDIR /app
-COPY --from=builder /app/target/wheels/junction-*.whl .
-RUN pip install ./*.whl --break-system-packages
+FROM python:3.12
 ADD junction-python/samples/routing-and-load-balancing/client.py .
 CMD ["python", "./client.py"]
