--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -45,4 +45,4 @@ jobs:
             docker build --tag jct_client:latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client --load .
       - name: run test
         run: |
-            kubectl run jct-client --image=jct_client:latest --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --image-pull-policy=IfNotPresent --attach --rm
+            kubectl run jct-client --image=jct_client:latest --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --image-pull-policy=IfNotPresent -i --rm
