--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -26,8 +26,6 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@master
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       - name: k3s
         uses: debianmaster/actions-k3s@master
         id: k3s
@@ -37,12 +35,12 @@ jobs:
         run: |
           kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
           kubectl apply -f junction-python/samples/routing-and-load-balancing/latest_ezbake.yml
-          docker build --tag jct_http_server:latest --file junction-python/samples/routing-and-load-balancing/Dockerfile-server --load .
+          docker build --tag jct_http_server:latest --file junction-python/samples/routing-and-load-balancing/Dockerfile-server .
           kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server.yml
           kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server_feature_1.yml
       - name: build test docker
         run: |
-            docker build --tag jct_client:latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client --load .
+            docker build --tag jct_client:latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client .
       - name: run test
         run: |
-            kubectl run my-shell --image=busybox --restart=Never --rm -it -- /bin/sh -c ls -l
+            kubectl run jct-client --image=jct_client:latest --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --image-pull-policy=IfNotPresent -it --rm
