--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -26,21 +26,33 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@master
-      - name: k3s
-        uses: debianmaster/actions-k3s@master
-        id: k3s
+      - uses: AbsaOSS/k3d-action@v2
+        name: "Create single k3d Cluster with imported Registry"
         with:
-          version: 'latest'
+          cluster-name: test-cluster-1
+          args: >-
+            --agents 3
+            --no-lb
+            --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
       - name: set up ezbake and server
         run: |
           kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
           kubectl apply -f junction-python/samples/routing-and-load-balancing/latest_ezbake.yml
           docker build --tag jct_http_server:latest --file junction-python/samples/routing-and-load-balancing/Dockerfile-server .
+          k3d image import jct_http_server:latest -c test-cluster-1 --verbose
           kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server.yml
           kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server_feature_1.yml
       - name: build test docker
         run: |
             docker build --tag jct_client:latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client .
+            k3d image import jct_client:latest -c test-cluster-1 --verbose
       - name: run test
         run: |
-            kubectl run jct-client --image=jct_client:latest --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --image-pull-policy=IfNotPresent -it --rm
+            kubectl run jct-client --image=jct_client:latest --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never -it --rm
+      - name: Nodes
+        run: |
+            docker ps -a
+            kubectl config use-context k3d-test-cluster-1
+            kubectl get nodes -o wide
+      - name: Network
+        run: docker network inspect k3d-test-cluster-1
