--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -48,10 +48,10 @@ jobs:
           docker build --tag jct_client:latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client .
           k3d image import jct_client:latest -c test-cluster-1
       - name: run test
-        continue-on-error: true
         run: |
           kubectl run jct-client --image=jct_client:latest --image-pull-policy=IfNotPresent --restart=Never --attach
       - name: Debug State
+        if: ${{ ! cancelled() }}
         run: |
             docker images -a
             docker ps -a
