--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -1,18 +1,58 @@
+name: smoke test
+
 on:
   push:
-    branches:
-      - master
+    branches: [ "main" ]
+    paths:
+      - "junction-python/**"
+      - "crates/**"
+      - ".github/workflows/smoke-test.yml"
+
   pull_request:
+    branches: [ "main" ]
+    paths:
+      - "junction-python/**"
+      - "crates/**"
+      - ".github/workflows/smoke-test.yml"
+
 env:
-  KUBECONFIG: k3s.yaml
+  CARGO_TERM_COLOR: always
+  rust_stable: stable
+  rust_min: 1.79
+
 jobs:
-  k3s:
-    name: k3s
+  smoke-test:
     runs-on: ubuntu-latest
+    
     steps:
       - name: checkout code
         uses: actions/checkout@master
-      - name: k3s
-        uses: yellowmegaman/k3s-gha@master
-      - name: try to use kubeconfig
-        run: kubectl get ns
+      - uses: AbsaOSS/k3d-action@v2
+        name: "Create single k3d Cluster with imported Registry"
+        with:
+          cluster-name: test-cluster-1
+          args: >-
+            --agents 1
+            --no-lb
+            --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
+      - name: set up ezbake and server
+        run: |
+          kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
+          kubectl apply -f junction-python/samples/routing-and-load-balancing/latest_ezbake.yml
+          docker build --tag jct_http_server:latest --file junction-python/samples/routing-and-load-balancing/Dockerfile-server .
+          k3d image import jct_http_server:latest -c test-cluster-1
+          kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server.yml
+          kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server_feature_1.yml
+      - name: build test docker
+        run: |
+          docker build --tag jct_client:latest --file ./junction-python/samples/routing-and-load-balancing/Dockerfile-client .
+          k3d image import jct_client:latest -c test-cluster-1
+      - name: run test
+        run: |
+          kubectl run jct-client --image=jct_client:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach
+      - name: Debug State
+        if: ${{ ! cancelled() }}
+        run: |
+            docker images -a
+            docker ps -a
+            kubectl get pods -o wide
