--- a/.github/workflows/docs-global.yml
+++ b/.github/workflows/docs-global.yml
@@ -10,6 +10,9 @@ on:
       - python-release-docs
   workflow_dispatch:
 
+env:
+  rust_stable: stable
+
 jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
@@ -17,6 +20,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.sha }}
+
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           config-file: docs/source/mlc-config.json
@@ -54,6 +58,12 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.sha }}
 
+      - name: "Install Rust @ ${{ env.rust_stable }}"
+        uses: dtolnay/rust-toolchain@stable
+        with:
+            toolchain: ${{ env.rust_stable }}
+      - uses: Swatinem/rust-cache@v2
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -69,12 +79,6 @@ jobs:
       - name: Install Python dependencies
         run: uv pip install -r junction-python/requirements-dev.txt -r docs/source/requirements.txt
 
-      - name: Set up Rust
-        run: rustup show
-
-      - name: Cache Rust
-        uses: Swatinem/rust-cache@v2
- 
       - name: Build and install junction python
         run: cargo xtask python-build
 
