--- a/.github/workflows/docs-python.yml
+++ b/.github/workflows/docs-python.yml
@@ -17,6 +17,9 @@ on:
     types:
       - python-release
 
+env:
+  rust_stable: stable
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 
@@ -27,6 +30,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.sha }}
+
+      - name: "Install Rust @ ${{ env.rust_stable }}"
+        uses: dtolnay/rust-toolchain@stable
+        with:
+            toolchain: ${{ env.rust_stable }}
+      - uses: Swatinem/rust-cache@v2          
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -41,14 +50,7 @@ jobs:
           echo "VIRTUAL_ENV=$GITHUB_WORKSPACE/.venv" >> $GITHUB_ENV
 
       - name: Install Python dependencies
-        working-directory: junction-python/docs
-        run: uv pip install -r requirements-docs.txt
-
-      - name: Set up Rust
-        run: rustup show
-
-      - name: Cache Rust
-        uses: Swatinem/rust-cache@v2
+        run: uv pip install r junction-python/requirements-dev.txt -r junction-python/docs/requirements-docs.txt
 
       - name: Build and install junction python
         run: cargo xtask python-build
