--- a/.github/workflows/docs-python.yml
+++ b/.github/workflows/docs-python.yml
@@ -21,7 +21,10 @@ env:
   rust_stable: stable
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: docs-${{ github.ref }}
+
+permissions:
+  contents: write
 
 jobs:
   build-python-docs:
