--- a/.github/workflows/docs-rust.yml
+++ b/.github/workflows/docs-rust.yml
@@ -18,7 +18,10 @@ env:
   rust_stable: stable
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: docs-${{ github.ref }}
+
+permissions:
+  contents: write
 
 jobs:
   build-rust-docs:
