--- a/.github/workflows/docs-global.yml
+++ b/.github/workflows/docs-global.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Deploy docs
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: target/docs/site
+          folder: docs/site
           clean-exclude: |
             api/python/
             api/rust/
@@ -113,4 +113,4 @@ jobs:
 
       # Make sure documentation artifacts are not cached
       - name: Clean up documentation artifacts
-        run: rm -rf target/doc
+        run: rm -rf docs/site
