--- a/.github/workflows/docs-python.yml
+++ b/.github/workflows/docs-python.yml
@@ -21,7 +21,7 @@ env:
   rust_stable: stable
 
 concurrency:
-  group: docs-${{ github.ref }}
+  group: ${{ github.job }}-${{ github.ref }} 
 
 permissions:
   contents: write
