--- a/.github/workflows/docs-global.yml
+++ b/.github/workflows/docs-global.yml
@@ -19,24 +19,12 @@ env:
   rust_stable: stable
 
 concurrency:
-  group: docs-${{ github.ref }}
+  group: ${{ github.job }}-${{ github.ref }} 
 
 permissions:
   contents: write
 
 jobs:
-  markdown-link-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.client_payload.sha }}
-
-      - uses: gaurav-nelson/github-action-markdown-link-check@v1
-        with:
-          config-file: docs/source/mlc-config.json
-          folder-path: docs
-
   lint:
     runs-on: ubuntu-latest
     steps:
