Change k8s Service representation, add functions for dumping YAML
Add Rust and Python functions for dumping Backends and Routes as YAML.

Change our k8s Service annotations to be a blob of JSON inside a single
annotation, isntead of flattening the entire struct to JSON. This means
that it's much easier to generate an apply-able patch with kubectl than
it would have been - patches overwrite annotations, so having a single
atomically replaceable blob means we can't accidentally split config.

--- a/junction-python/Cargo.toml
+++ b/junction-python/Cargo.toml
@@ -17,6 +17,7 @@ junction-api = { workspace = true }
 once_cell = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+serde_yml = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 xds-api = { workspace = true, features = ["pbjson"] }
 pyo3 = { version = "0.21", features = ["abi3-py38", "serde"] }
