--- a/.github/workflows/docs-rust.yml
+++ b/.github/workflows/docs-rust.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build Rust documentation
         env:
-          RUSTDOCFLAGS: --cfg docsrs --allow=rustdoc::redundant-explicit-links
+          RUSTDOCFLAGS: --cfg docsrs -D warnings --allow=rustdoc::redundant-explicit-links
         run: cargo doc --no-deps -p junction-api -p junction-core
 
       - name: Deploy Rust docs
