--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ resolver = "2"
 version = "0.1.0"
 edition = "2021"
 homepage = "https://github.com/junction-labs/junction-client"
+rust-version = "1.79"
 
 [workspace.dependencies]
 arc-swap = "1.7"
