--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -25,6 +25,8 @@ gateway-api = { version = "0.10.0", optional = true }
 
 [dev-dependencies]
 serde_yml = "0.0.12"
+arbtest = "0.3"
+arbitrary = "1.3"
 
 [features]
 default = ["kube", "xds"]
