--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -18,18 +18,22 @@ junction-typeinfo = { workspace = true, optional = true }
 xds-api = { workspace = true, default-features = false, optional = true }
 
 # kube
-# TODO: have to remove dependencies on Duration to make these optional
-k8s-openapi = { workspace = true, features = ["v1_29"] }
-kube = { workspace = true, features = ["derive"] }
-gateway-api = { version = "0.10.0", optional = true }
+#
+# k8s-openapi and the gateway-api crates have to be kept in sync, or we'll have
+# a bad time with multiple versions of types and feature flags won't be set.
+k8s-openapi = { version = "0.23", optional = true }
+gateway-api = { version = "0.14.0", optional = true }
+# TODO: remove the string parsing dependency on Duration to make kube optional (or remove it?)
+kube = { version = "0.96" }
 
 [dev-dependencies]
 serde_yml = "0.0.12"
 arbtest = "0.3"
 arbitrary = "1.3"
+k8s-openapi = { version = "0.23", features = ["v1_29"] }
 
 [features]
 default = ["kube", "xds"]
 typeinfo = ["dep:junction-typeinfo"]
-kube = ["dep:gateway-api"]
+kube = ["dep:gateway-api", "dep:k8s-openapi", "dep:gateway-api"]
 xds = ["dep:xds-api"]
