--- a/junction-python/Cargo.toml
+++ b/junction-python/Cargo.toml
@@ -14,6 +14,7 @@ extension-module = ["pyo3/extension-module"]
 http = { workspace = true }
 junction-core = { workspace = true }
 junction-api = { workspace = true }
+k8s-openapi = { version = "0.23", features = ["v1_29"] }
 once_cell = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
@@ -25,5 +26,3 @@ pythonize = "0.21"
 
 [build-dependencies]
 pyo3-build-config = "0.22"
-junction-api = { workspace = true, features = ["typeinfo"] }
-junction-typeinfo = { workspace = true }
