--- a/.github/workflows/docs-rust.yml
+++ b/.github/workflows/docs-rust.yml
@@ -18,7 +18,7 @@ env:
   rust_stable: stable
 
 concurrency:
-  group: ${{ github.job }}-${{ github.ref }} 
+  group: ${{ github.job }}-${{ github.ref }}
 
 permissions:
   contents: write
@@ -38,7 +38,7 @@ jobs:
       - name: Build Rust documentation
         env:
           RUSTDOCFLAGS: --cfg docsrs -D warnings --allow=rustdoc::redundant-explicit-links
-        run: cargo doc --no-deps -p junction-api -p junction-core
+        run: cargo xtask doc --crates junction-api junction-core
 
       - name: Deploy Rust docs
         if: github.event_name == 'push' && github.ref_name == 'main'
