an action to build wheels for the tip of main

--- a/junction-python/pyproject.toml
+++ b/junction-python/pyproject.toml
@@ -12,3 +12,7 @@ build-backend = "maturin"
 
 [tool.ruff]
 exclude = ["*pb2.py", "*pb2_grpc.py"]
+
+[tool.maturin]
+include = [{ path = "LICENSE", format = "sdist" }]
+exclude = [{ path = "junction-python/samples", format = "sdist" }]
