--- a/junction-python/Cargo.toml
+++ b/junction-python/Cargo.toml
@@ -7,9 +7,6 @@ edition = "2021"
 name = "junction"
 crate-type = ["cdylib"]
 
-[features]
-extension-module = ["pyo3/extension-module"]
-
 [dependencies]
 http = { workspace = true }
 junction-core = { workspace = true }
@@ -21,7 +18,11 @@ serde_json = { workspace = true }
 serde_yml = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 xds-api = { workspace = true, features = ["pbjson"] }
-pyo3 = { version = "0.21", features = ["abi3-py38", "serde"] }
+pyo3 = { version = "0.21", features = [
+    "extension-module",
+    "abi3-py38",
+    "serde",
+] }
 pythonize = "0.21"
 
 [build-dependencies]
