--- a/junction-python/samples/routing-and-load-balancing/Dockerfile-client
+++ b/junction-python/samples/routing-and-load-balancing/Dockerfile-client
@@ -1,28 +1,18 @@
-## We don't do any of the clever incremtal stuff as it makes
-## the initial build take 1 minute longer, and the major purpose
-## of this container is in a github action where its always an 
-## initial build
+FROM python:3.12
 
-FROM lukemathwalker/cargo-chef:latest-rust-1 AS chef
-WORKDIR /app
-RUN apt update
-RUN apt install -y python3 python3-pip python3.11-venv python-is-python3
-RUN apt install -y 
+# the name of the junction package to install with pip this can be either a pypi
+# package name, a wheel URL, or a local path to a wheel.
+#
+# NOTE: If you're using this as a local path to a wheel, you may have to mount
+# the wheel into the container with Docker's --volume arg.
+ARG junction_wheel
 
-FROM chef AS builder 
-COPY ./junction-python ./junction-python
-COPY ./xtask ./xtask
-COPY ./Cargo.toml ./Cargo.toml
-COPY ./Cargo.lock ./Cargo.lock
-COPY ./crates ./crates
-COPY ./.cargo ./.cargo
-RUN cargo xtask python-build --maturin build
+WORKDIR /client
 
-FROM debian:bookworm-slim AS runtime
-RUN apt-get update
-RUN apt-get install -y python3 python3-pip python-is-python3
-WORKDIR /app
-COPY --from=builder /app/target/wheels/junction-*.whl .
-RUN pip install ./*.whl --break-system-packages
+ADD ${junction_wheel} .
+
+RUN python -m venv .venv
+RUN .venv/bin/pip install --upgrade pip
+RUN .venv/bin/pip install *.whl
 ADD junction-python/samples/routing-and-load-balancing/client.py .
-CMD ["python", "./client.py"]
+CMD [".venv/bin/python", "./client.py"]
