--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -33,7 +33,7 @@ arbitrary = "1.3"
 k8s-openapi = { version = "0.23", features = ["v1_29"] }
 
 [features]
-default = ["kube", "xds"]
+default = []
 typeinfo = ["dep:junction-typeinfo"]
 kube = ["dep:gateway-api", "dep:k8s-openapi", "dep:gateway-api"]
 xds = ["dep:xds-api"]
