--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 http = { workspace = true }
 regex = { workspace = true }
-serde = { workspace = true, default-features = false }
+serde = { workspace = true, default-features = false, features = ["derive"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
@@ -23,17 +23,46 @@ xds-api = { workspace = true, default-features = false, optional = true }
 # a bad time with multiple versions of types and feature flags won't be set.
 k8s-openapi = { version = "0.23", optional = true }
 gateway-api = { version = "0.14.0", optional = true }
-# TODO: remove the string parsing dependency on Duration to make kube optional (or remove it?)
-kube = { version = "0.96" }
+kube = { version = "0.96", optional = true }
 
 [dev-dependencies]
 serde_yml = "0.0.12"
 arbtest = "0.3"
 arbitrary = "1.3"
-k8s-openapi = { version = "0.23", features = ["v1_29"] }
 
 [features]
 default = []
+
+# enable reflection. this is intended to only be used at build time to generate
+# cross-language APIs.
 typeinfo = ["dep:junction-typeinfo"]
-kube = ["dep:gateway-api", "dep:k8s-openapi", "dep:gateway-api"]
+
+
+# enable xds conversion for core types.
 xds = ["dep:xds-api"]
+
+# enable kube conversion for core types. each of these flags sets a MINIMUM
+# version of the kubernetes API to be compatible with.
+#
+# because k8s-openapi does kube version selection with Cargo features, we're
+# priced in to doing it as well. doing it this way means downstream crates don't
+# have to ALSO depend on k8s-openapi and pick exactly the same version/feature
+# flag combination.
+kube_v1_29 = [
+    "dep:kube",
+    "dep:gateway-api",
+    "dep:gateway-api",
+    "k8s-openapi/v1_29",
+]
+kube_v1_30 = [
+    "dep:kube",
+    "dep:gateway-api",
+    "dep:gateway-api",
+    "k8s-openapi/v1_30",
+]
+kube_v1_31 = [
+    "dep:kube",
+    "dep:gateway-api",
+    "dep:gateway-api",
+    "k8s-openapi/v1_31",
+]
