--- a/.github/workflows/docs-rust.yml
+++ b/.github/workflows/docs-rust.yml
@@ -36,9 +36,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Build Rust documentation
-        env:
-          RUSTDOCFLAGS: --cfg docsrs -D warnings --allow=rustdoc::redundant-explicit-links
-        run: cargo xtask doc --crates junction-api junction-core
+        run: cargo xtask ci-doc
 
       - name: Deploy Rust docs
         if: github.event_name == 'push' && github.ref_name == 'main'
