--- a/.github/workflows/junction-ci.yml
+++ b/.github/workflows/junction-ci.yml
@@ -46,8 +46,8 @@ jobs:
           toolchain: ${{ env.rust_stable }}
     - uses: Swatinem/rust-cache@v2
     - name: test
-      run: cargo test
-  
+      run: cargo xtask ci-test
+
   clippy:
     runs-on: ubuntu-latest
     steps:
@@ -58,8 +58,8 @@ jobs:
           toolchain: ${{ env.rust_stable }}
     - uses: Swatinem/rust-cache@v2
     - name: clippy
-      run: cargo clippy --tests --all-features --no-deps -- -D warnings -D clippy::dbg_macro
-  
+      run: cargo xtask ci-clippy
+
   fmt:
     runs-on: ubuntu-latest
     steps:
